--- a/VoiceRecognitionSample/app/src/main/res/layout/activity_media.xml
+++ b/VoiceRecognitionSample/app/src/main/res/layout/activity_media.xml
@@ -5,6 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MediaActivity">
+<VideoView
+    android:id="@+id/videoView"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+</VideoView>
 
 <SurfaceView
     android:id="@+id/surfaceView"
