--- a/VoiceRecognitionSample/app/src/main/res/layout/activity_main.xml
+++ b/VoiceRecognitionSample/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
       android:layout_height="wrap_content"
       android:alpha="0.3"
       android:contentDescription="Background image"
-      android:src="@drawable/ic_launcher_foreground"
+      android:src="@drawable/exercise"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
