--- a/VoiceRecognitionSample/app/src/main/res/layout/activity_timer.xml
+++ b/VoiceRecognitionSample/app/src/main/res/layout/activity_timer.xml
@@ -11,7 +11,7 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -40,9 +40,9 @@ limitations under the License.
         android:id="@+id/counttimer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center"
         android:text="00:00"
-        android:textSize="50dp"
-        android:gravity="center"/>
+        android:textSize="50dp" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
