음성메모_오류

--- a/VoiceRecognitionSample/app/src/main/res/layout/activity_memo.xml
+++ b/VoiceRecognitionSample/app/src/main/res/layout/activity_memo.xml
@@ -34,11 +34,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="8dp"
-        android:src="@drawable/ic_arrow_left"
+        android:layout_marginStart="8dp"
+        android:contentDescription="@null"
+        android:src="@drawable/voice"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="@null" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/instruction"
@@ -82,5 +84,11 @@
         android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
